public/css/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}


/***Animation on PageLoad***/

@keyframes slideInLeft {
    0% {
        transform: translateX(50%);
    }
    100% {
        transform: translateX(0%);
    }
}

@keyframes slideInRight {
    0% {
        transform: translateX(-50%);
    }
    100% {
        transform: translateX(0%);
    }
}

@keyframes slideInUp {
    0% {
        transform: translateY(50%);
    }
    100% {
        transform: translateX(0%);
    }
}

.scroll-up-button {
    position: fixed;
    height: 45px;
    width: 45px;
    background: #050505;
    right: 30px;
    bottom: 30px;
    text-align: center;
    line-height: 55px;
    color: #fff;
    z-index: 9999;
    font-size: 30px;
    border: solid white;
    border-radius: 10px;
    border-width: 2px;
    cursor: pointer;
    /* opacity: 0; */
    /* pointer-events: none; */
    transition: 1s;
    box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
}

.scroll {
    visibility: hidden;
}

.scroll-up-button a {
    color: white;
}

.scroll-up-button:hover {
    transition: 0.4s;
    transform: scale(1.2);
}

.thanks {
    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    height: 100px;
    width: 500px;
    background: rgba(0, 0, 0, .75);
    top: 250px;
    left: 425px;
    text-align: center;
    /* line-height: 55px; */
    color: #fff;
    z-index: 9999;
    font-size: 30px;
    border-radius: 10px;
    cursor: pointer;
    animation: 2s ease-out 0s 1 slideInUp;
    transition: 0.5s;
}

.thanks-show {
    display: none;
}

body {
    background: #000;
}

.top {
    background: #000;
}

header {
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    transition: 0.6s;
    padding: 40px 100px;
    z-index: 100000;
    flex-wrap: wrap;
}


/**Navbar**/

.hamburger {
    display: none;
    background: transparent;
    color: #fff;
    font-size: 1.5rem;
    border: none;
    cursor: pointer;
}

.hamburger:hover {
    outline: none;
}

.sticky {
    padding: 5px 100px;
    background: #050505;
    /* opacity: 75%; */
    border: solid white;
    border-top: none;
    border-left: none;
    border-right: none;
    /* border-radius: 10px; */
}

header .logo {
    position: relative;
    font-size: 2rem;
    color: #fff;
    font-weight: 700;
    /* text-transform: uppercase; */
    text-decoration: none;
    letter-spacing: 2px;
    transition: 0.6s;
    animation: 2s ease-out 0s 1 slideInRight;
}

.sticky .logo {
    color: #fff;
}

header ul {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    transition: 0.6s;
    animation: 2s ease-out 0s 1 slideInLeft;
}

header ul li {
    position: relative;
    list-style: none;
    animation: 2s ease-out 0s 1 slideInLeft;
}

header ul li a {
    position: relative;
    margin: 0 15px;
    text-decoration: none;
    color: #fff;
    letter-spacing: 2px;
    font-weight: 500;
    transition: 0.6s;
}

.sticky ul li a {
    color: #fff;
}

.home {
    display: flex;
    position: relative;
    width: 100%;
    height: 100vh;
    /*Mandatory*/
    /* background-image: url(../images/laptop_3-wallpaper-5120x2880.jpg); */
    /* background-image: url(../images/apple2.jpg); */
    background-image: url(../images/home-desktop.jpg);
    background-size: cover;
    background-attachment: fixed;
    /***Makes the bg image fixed***/
    align-items: center;
}

.transparency {
    background-image: url(../images/home-dim-desktop.jpg);
    /* background-image: url(../images/black\ and\ white.jpg); */
    background-size: cover;
    background-attachment: fixed;
}

.home-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: white;
    width: 100%;
    color: white;
    /* opacity: 25%; */
    background-color: transparent;
    animation: 2s ease-out 0s 1 slideInUp;
}

.home-title {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    max-width: 50%;
}

.home-title .title {
    /* display: inline-block; */
    font-size: 4rem;
    font-weight: 500;
    /* letter-spacing: 5px; */
    cursor: pointer;
    opacity: 100%;
}

.home-title .title:hover {
    transition: 0.5s;
    transform: scale(1.1);
}

.home-title .title span {
    transition: 0.5s;
}

.home-title .title span {
    transition: 0.5s;
}

.home-title .title:hover span:nth-child(1) {
    margin-left: 10px;
}

.home-title .title:hover span:nth-child(1) {
    margin-right: 5px;
}

.home-title .title span {
    text-shadow: 0 0 0.5px #fff, 0 0 1px #fff, 0 0 2px #fff, 0 0 4px #fff, 0 0 50px #fff, 0 0 100px #fff;
}


/* .effects {
    text-shadow: 0 0 0.5px #fff, 0 0 1px #fff, 0 0 2px #fff, 0 0 4px #fff, 0 0 50px #fff, 0 0 100px #fff;
} */

.about {
    /* display: flex;
    align-items: center; */
    background-color: #050505;
    border: solid white;
    border-bottom: none;
    border-left: none;
    border-right: none;
}

.about-content {
    padding: 100px 90px;
    background-color: #050505;
    color: white;
}

.about-animation {
    transition: 0.5s;
    animation: 1s ease-out 0s 1 slideInUp;
}

.about-padding {
    padding-top: 500px;
    background-color: #050505;
}

.title {
    font-size: 3rem;
    font-weight: 500;
    text-align: center;
    color: white;
    text-shadow: 0 0 0.5px #fff, 0 0 1px #fff, 0 0 2px #fff, 0 0 4px #fff, 0 0 25px #fff, 0 0 100px #fff;
}

.about-title {
    padding-bottom: 50px;
}

.about-title:hover {
    transform: scale(1.1);
    transition: 0.5s;
}

.about-para {
    padding-top: 50px;
    font-size: 1.3rem;
    line-height: 2;
}

.about-para h1 {
    padding-bottom: 50px;
}

.about-para-animation {
    animation: 1s ease-out 0s 1 slideInUp;
}
/* ... */

